[project]
name = "text-frequency-analyzer"
version = "0.1.0"
description = "A text frequency analyzer with Pydantic data validation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Eric Burns"},
]

dependencies = [
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
